# rdx

./: .gitignore  Cargo.toml  README.md  build.rs
assets/shaders/: raytrace.rgen  shader.vert  tonemap.frag  tonemap.vert  triangle.frag  triangle.vert
crates/rdx_renderer/: Cargo.toml
crates/rdx_renderer/src/: acceleration_structures.rs  buffer.rs  command_buffer.rs  descriptor.rs  device.rs  encoder.rs  image.rs  instance.rs  lib.rs  physical_device.rs  queue.rs  render_context.rs  resources.rs  shader.rs  util.rs
crates/rdx_renderer/src/pipeline/: graphics_pipeline.rs  mod.rs  raster_pipeline.rs  ray_tracing.rs  ray_tracing_pipeline.rs
crates/rdx_renderer/src/renderer/: mod.rs
crates/rdx_renderer/src/renderer/pass/: mod.rs  raster_pass.rs  raytracing_pass.rs  tonemap_pass.rs
crates/tracer_core/: Cargo.toml
crates/tracer_render/: Cargo.toml
crates/tracer_render/src/: acceleration_structures.rs  blas.rs  buffer.rs  buffer_resource.rs  command_buffer.rs  commands.rs  descriptor.rs  device.rs  device_info.rs  encoder.rs  framebuffer.rs  image.rs  instance.rs  lib.rs  mesh.rs  physical_device.rs  queue.rs  raytracing.rs  raytracing_builder.rs  render_context.rs  render_pass.rs  render_resources.rs  renderer.rs  resources.rs  shader.rs  surface.rs  swapchain.rs  util.rs  vertex.rs  vertex_buffer_descriptor.rs  vertex_format.rs  vk_types.rs
crates/tracer_render/src/pipeline/: graphics_pipeline.rs  mod.rs  raster_pipeline.rs  ray_tracing.rs
crates/tracer_render/src/renderer/: mod.rs
crates/tracer_render/src/renderer/pass/: mod.rs  raster.rs  raster_pass.rs
src/: main.rs
