[package]
name = "tracer"
version = "0.1.0"
authors = ["Gonçalo Soares <goncalofds@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
tracer_render = { path = "./crates/tracer_render" }
tracer_core = { path = "./crates/tracer_core" }
glam = { version = "0.13", features = ["transform-types"] }
