[package]
name = "tracer"
version = "0.1.0"
authors = ["Gonçalo Soares <goncalofds@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
bevy = { version = "0.5" , deafault-features = false, features = ["bevy_winit"]}
tracer_render = { path = "./crates/tracer_render" }
glam = { version = "0.13", features = ["transform-types"] }
