[package]
name = "tracer_render"
version = "0.1.0"
authors = ["Gonçalo Soares <goncalofds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_winit"] }
glam = { version = "0.15", features = ["transform-types"] }
serde = { version = "1.0", features = ["derive"] }

# Assets
tobj = "2.0.4"

# Graphics
erupt = { git = "https://gitlab.com/Friz64/erupt" }
#erupt = "0.18.0+174"
gpu-alloc-erupt = "0.4"
gpu-alloc = "0.4"

# Windowing
winit = "0.24.0"

# Tracing
tracing = "0.1"

