[package]
name = "tracer_render"
version = "0.1.0"
authors = ["Gonçalo Soares <goncalofds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_winit"] }
glam = { version = "0.16", features = ["transform-types"] }
serde = { version = "1.0", features = ["derive"] }

# Assets
tobj = "3.0"

# Graphics
erupt = "0.19"
gpu-alloc-erupt = "0.5"
gpu-alloc = "0.4"

# Windowing
winit = "0.24.0"

# Tracing
tracing = "0.1"

memoffset = "0.6"
crevice = "0.6"
slab = "0.4"
parking_lot = "0.11"
smallvec = "1.6"
lru = "0.6"
